# qt_hugelistview

./: .clang-format  CMakeLists.txt  README.md
src/: customdelegate.cpp  customdelegate.h  main.cpp
